--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     </style>
   </head>
   <body class="manrope-font">
-    <main>
-      <header class="px-3 max-w-screen-lg mx-auto lg:flex mt-10">
+    <main class="w-11/12 max-w-screen-lg mx-auto">
+      <header class="px-3 lg:flex md:flex mt-10">
         <div class="flex flex-col items-start">
           <h1 class="text-5xl font-extrabold lg:text-6xl">
             It's good <br />
@@ -68,6 +68,54 @@
           </div>
         </div>
       </header>
+      <section class="mt-20">
+        <h1 class="text-5xl font-extrabold text-center mb-5">
+          Our Featured Products
+        </h1>
+        <p class="text-base font-medium text-gray-500 text-center mb-7">
+          There are many variations of passages of Lorem Ipsum available, but
+          the majority have suffered alteration in some form, by injected
+          humour, or randomised words which don't look even slightly believable.
+        </p>
+        <div class="grid grid-cols-2 md:grid-cols-4 lg:grid-cols-4 gap-5">
+          <div
+            class="rounded-2xl flex justify-center flex-col items-center bg-[#F4F4F4] p-6"
+          >
+            <img class="rounded-xl py-2" src="images/tea-1.png" alt="" />
+            <h3 class="text-lg font-extrabold">Milk Tea</h3>
+            <p class="text-xs font-semibold text-gray-500 text-center">
+              Creamer could be replaced by fresh milk
+            </p>
+          </div>
+          <div
+            class="rounded-2xl flex justify-center flex-col items-center bg-[#F4F4F4] p-6"
+          >
+            <img class="rounded-xl py-2" src="images/tea-2.png" alt="" />
+            <h3 class="text-lg font-extrabold">Black Tea</h3>
+            <p class="text-xs font-semibold text-gray-500 text-center">
+              Creamer could be replaced by fresh milk
+            </p>
+          </div>
+          <div
+            class="rounded-2xl flex justify-center flex-col items-center bg-[#F4F4F4] p-6"
+          >
+            <img class="rounded-xl py-2" src="images/tea-3.png" alt="" />
+            <h3 class="text-lg font-extrabold">Lemon Tea</h3>
+            <p class="text-xs font-semibold text-gray-500 text-center">
+              Creamer could be replaced by fresh milk
+            </p>
+          </div>
+          <div
+            class="rounded-2xl flex justify-center flex-col items-center bg-[#F4F4F4] p-6"
+          >
+            <img class="rounded-xl py-2" src="images/tea-4.png" alt="" />
+            <h3 class="text-lg font-extrabold">Green Tea</h3>
+            <p class="text-xs font-semibold text-gray-500 text-center">
+              Creamer could be replaced by fresh milk
+            </p>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
