--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
     </style>
   </head>
   <body class="manrope-font">
+    <!-- *main section -->
     <main class="w-11/12 max-w-screen-lg mx-auto">
+      <!-- *header section -->
       <header class="px-3 lg:flex md:flex mt-10">
         <div class="flex flex-col items-start">
           <h1 class="text-5xl font-extrabold lg:text-6xl">
@@ -68,6 +70,7 @@
           </div>
         </div>
       </header>
+      <!-- *featured products -->
       <section class="mt-20">
         <h1 class="text-5xl font-extrabold text-center mb-5">
           Our Featured Products
@@ -114,6 +117,45 @@
               Creamer could be replaced by fresh milk
             </p>
           </div>
+        </div>
+      </section>
+      <!-- *Freshly presented section -->
+      <section class="mt-20 grid grid-cols-1 lg:grid-cols-2 md:grid-cols-2">
+        <div class="grid grid-cols-2 grid-rows-3 gap-4 lg:w-5/6 mb-11">
+          <div
+            class="h-38 bg-gradient-to-r from-red-100 to-red-50 rounded-xl"
+          ></div>
+          <div class="bg-orange-50 rounded-xl row-span-2">
+            <img class="mx-auto my-5" src="./images/fresh-1.png" alt="" />
+          </div>
+          <div class="bg-stone-100 rounded-xl row-span-2">
+            <img class="mx-auto my-5" src="./images/fresh-2.png" alt="" />
+          </div>
+          <div
+            class="h-38 bg-gradient-to-r from-stone-200 to-stone-100 rounded-xl"
+          ></div>
+        </div>
+        <div>
+          <h1 class="text-5xl font-extrabold mb-5">
+            Great Tea, Freshly Presented
+          </h1>
+          <p class="text-xs font-medium mb-5 text-gray-500 text-balance">
+            The meaning of gong cha is chanese is to provide the best tea to
+            emperor from all possessions . It represents the highest quality and
+            self expectation. Establishing in 2006, Gong cha had been deeply
+            appreciated by its custoers because of good words of mouth and
+            unique customized service orginated from Taiwan.
+          </p>
+          <h3 class="text-xl font-extrabold mb-2">Unique Taste</h3>
+          <p class="text-xs font-medium mb-5 text-gray-500">
+            A Unique and different style from other teapots gives a
+            <br />luxurious and minimalist impression
+          </p>
+          <h3 class="text-xl font-extrabold mb-2">Premium Quality</h3>
+          <p class="text-xs font-medium mb-5 text-gray-500">
+            Premium Quality that makes tea more elegant and more <br />
+            durable when you use it.
+          </p>
         </div>
       </section>
     </main>
