added client section

--- a/index.html
+++ b/index.html
@@ -158,6 +158,82 @@
           </p>
         </div>
       </section>
+      <!-- *super client section -->
+      <section
+        class="sm:flex sm:flex-col md:flex md:justify-between lg:flex lg:justify-between lg:flex-row bg-gradient-to-r from-[#FF8938] to-[#FF0000] rounded-xl">
+        <div
+          class="flex justify-center items-start flex-col lg:w-2/5 md:w-2/5 p-10"
+        >
+          <h1 class="text-5xl font-extrabold text-[#F4F4F4] mb-5 text-nowrap">
+            Meet Our Super<br />
+            Clients
+          </h1>
+          <p class="text-base font-medium text-[#F4F4F4] mb-5">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomised words which don't look even slightly
+            believable.
+          </p>
+          <button
+            class="text-xl font-bold text-[#FF0000FF] bg-[#FFFFFF] px-7 py-4 rounded-lg"
+          >
+            Show All
+          </button>
+        </div>
+
+          <div class="flex flex-col justify-center items-center p-10 gap-8 relative">
+            <div class="bg-[#FFFFFF] rounded-lg p-10 relative opacity-35 w-96">
+              <img
+                class="absolute -top-8 -left-8"
+                src="images/client.png"
+                alt=""
+              />
+              <p class="text-base font-normal mb-4">
+                We are providing the best and suitable home insurance services
+                for the people who are interested to treatment
+              </p>
+              <h5 class="text-base font-bold mb-1">Ilham Yuda</h5>
+              <div class="flex justify-between">
+                <p class="text-base font-normal">Businessman</p>
+                <img src="images/circles.png" alt="" />
+              </div>
+            </div>
+            <div class="bg-[#FFFFFF] rounded-lg p-10 relative opacity-35 w-96">
+              <img
+                class="absolute -top-8 -left-8"
+                src="images/client.png"
+                alt=""
+              />
+              <p class="text-base font-normal mb-4">
+                We are providing the best and suitable home insurance services
+                for the people who are interested to treatment
+              </p>
+              <h5 class="text-base font-bold mb-1">Ilham Yuda</h5>
+              <div class="flex justify-between">
+                <p class="text-base font-normal">Businessman</p>
+                <img src="images/circles.png" alt="" />
+              </div>
+            </div>
+            <div class="absolute w-96 lg:-left-5 md:-left-5 left-8">
+              <div class="bg-[#FFFFFF] rounded-lg p-10 relative">
+                <img
+                  class="absolute -top-8 -left-8"
+                  src="images/client.png"
+                  alt=""
+                />
+                <p class="text-base font-normal mb-4">
+                  We are providing the best and suitable home insurance services
+                  for the people who are interested to treatment
+                </p>
+                <h5 class="text-base font-bold mb-1">Ilham Yuda</h5>
+                <div class="flex justify-between">
+                  <p class="text-base font-normal">Businessman</p>
+                  <img src="images/circles.png" alt="" />
+            </div>
+            </div>
+            
+        </div>
+      </section>
     </main>
   </body>
 </html>
