--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                 <img src="images/circles.png" alt="" />
               </div>
             </div>
-            <div class="absolute w-96 lg:-left-5 md:-left-5 left-8">
+            <di class="absolute w-96 lg:-left-5 md:-left-5 left-8">
               <div class="bg-[#FFFFFF] rounded-lg p-10 relative">
                 <img
                   class="absolute -top-8 -left-8"
@@ -231,8 +231,34 @@
                   <img src="images/circles.png" alt="" />
             </div>
             </div>
-            
-        </div>
+                </section>
+                <!-- *news and event section -->
+      <section class="mt-20">
+                <h1 class="text-5xl font-extrabold text-center mb-5">News & Events</h1>
+                <p class="text-base font-medium text-gray-500 text-center mb-10">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+                <div class="grid grid-cols-1 gap-5 lg:grid-cols-3 md:grid-cols-3">
+                  <div class="p-5 rounded-xl border-2">
+                    <img class="w-full" src="images/news-1.png" alt="">
+                    <p class="text-base font-medium text-gray-500 mb-3 mt-3">Feb 05, 2027</p>
+                    <h3 class="text-xl font-extrabold mb-3 mt-3">Collecting 8 points for discount</h3>
+                    <p class="text-base font-medium text-gray-500 mb-3 mt-3">There are many variations of passages of Lorem Ipsum available.</p>
+                    <button class="text-base font-extrabold">Learn More</button>
+                  </div>
+                  <div class="p-5 rounded-xl border-2">
+                    <img class="w-full" src="images/news-2.png" alt="">
+                    <p class="text-base font-medium text-gray-500 mb-3 mt-3">Feb 05, 2027</p>
+                    <h3 class="text-xl font-extrabold mb-3 mt-3">Collecting 8 points for discount</h3>
+                    <p class="text-base font-medium text-gray-500 mb-3 mt-3">There are many variations of passages of Lorem Ipsum available.</p>
+                    <button class="text-base font-extrabold">Learn More</button>
+                  </div>
+                  <div class="p-5 rounded-xl border-2">
+                    <img class="w-full" src="images/news-3.png" alt="">
+                    <p class="text-base font-medium text-gray-500 mb-3 mt-3">Feb 05, 2027</p>
+                    <h3 class="text-xl font-extrabold mb-3 mt-3">Collecting 8 points for discount</h3>
+                    <p class="text-base font-medium text-gray-500 mb-3 mt-3">There are many variations of passages of Lorem Ipsum available.</p>
+                    <button class="text-base font-extrabold">Learn More</button>
+                  </div>
+                </div>
       </section>
     </main>
   </body>
