added footer section

--- a/index.html
+++ b/index.html
@@ -260,6 +260,52 @@
                   </div>
                 </div>
       </section>
-    </main>
+   </main>
+    <footer class="w-full bg-[#ffeee9] mt-20">
+      <div class="w-11/12 max-w-screen-lg mx-auto">
+        <div class="flex justify-between pt-12 pb-14">
+          <img src="images/cup.png" alt="">
+          <div class="flex items-center gap-2">
+            <p>Ready to get strated?                 </p>
+            <button class="bg-gradient-to-r from-[#FF8938] to-[#FF0000] px-5 py-4 text-white font-bold rounded-lg">
+            Get Started  
+          </button>
+          </div>
+        </div>
+        <div class="grid grid-cols-2 lg:grid-cols-4 md:grid-cols-4">
+          <div>
+            <h3 class="text-xl font-semibold">Quick Links</h3>
+            <p class="text-base font-normal text-gray-600 mt-3">Home</p>
+            <p class="text-base font-normal text-gray-600 mt-2">About Us</p>
+            <p class="text-base font-normal text-gray-600 mt-2">Insurance</p>
+            <p class="text-base font-normal text-gray-600 mt-2">Privacy Policy</p>
+          </div>
+          <div>
+            <h3 class="text-xl font-semibold">Our Service</h3>
+            <p class="text-base font-normal text-gray-600 mt-3">Life Insurance</p>
+            <p class="text-base font-normal text-gray-600 mt-2">Car Insurance</p>
+            <p class="text-base font-normal text-gray-600 mt-2">Health Insurance</p>
+            <p class="text-base font-normal text-gray-600 mt-2">House Insurance</p>
+          </div>
+          <div>
+            <h3 class="text-xl font-semibold">Help</h3>
+            <p class="text-base font-normal text-gray-600 mt-3">FAQs</p>
+            <p class="text-base font-normal text-gray-600 mt-2">Contact Us</p>
+          </div>
+       <div>
+        <h3 class="text-xl font-extrabold mt-5 mb-3">Subscribe to our newsletter</h3>
+        <div class="flex"><input class="bg-[#ffeee9] border-b-2 border-black" type="email" name="" id="" placeholder="Email Address">
+        <button class="bg-gradient-to-r from-[#FF8938] to-[#FF0000] p-3 rounded-full"><i class="fa-solid fa-angle-right text-white"></i></button>
+        </div>
+        <div class="text-3xl flex gap-6 mt-4">
+          <i class="fa-brands fa-facebook-f"></i>
+          <i class="fa-brands fa-twitter"></i>
+          <i class="fa-brands fa-square-instagram"></i>
+        </div>
+       </div>
+        </div>
+      </div>
+      <div><p class="text-center text-base font-normal text-gray-600 mt-12 pb-12">© 2027 UIDesign.to - All rights reserved.</p></div>
+    </footer>
   </body>
 </html>
